--- a/root/index.html
+++ b/root/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angelos Gketsis Portfolio Site</title>
 
+    <!-- favicon -->
+    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <link rel="icon" type="image/png" href="images/favicon.png">
+
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 
@@ -18,6 +22,12 @@
 </head>
 
 <body>
+    <div id="particles-js"></div>
+
+    <!-- scroll-to-top button -->
+    <div class="scroll-top">
+        <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+    </div>
 
     <!-- header design -->
     <header class="header">
@@ -28,7 +38,6 @@
             <a href="#about">About</a>
             <a href="#experience">Experience</a>
             <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
         </nav>
 
         <div class="bx bx-sun" id="lightMode-icon"></div>
@@ -443,20 +452,6 @@
     </div>
 -->
 
-    <!-- contact section design -->
-    <section class="contact" id="contact">
-        <h2 class="heading">Contact <span>Me!</span></h2>
-
-        <form id="fcf-form-id" class="fcf-form-class" method="post" action="php/contact-form-process.php">
-            <div class="input-box">
-                <input type="text" id="Name" name="Name" placeholder="Full Name" required>
-                <input type="email" id="Email" name="Email" placeholder="Email Address" required>
-            </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-            <input type="submit" value="Send Message" class="btn">
-        </form>
-    </section>
-
     <!-- footer design -->
     <footer class="footer">
         <div class="footer-text">
@@ -474,6 +469,9 @@
 
     <!-- swiper js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
+    <!-- particles js -->
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
     <!-- custom js -->
     <script src="js/script.js"></script>
