--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/images/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Angelos Gketsis Portfolio - Computer Science and Engineering Undergraduate" />
+  <meta name="description" content="Lydia Gketsi Portfolio - Computer Science and Engineering Undergraduate" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Angelos Gketsis Portfolio Site</title>
+  <title>Lydia Gketsi Portfolio Site</title>
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
     // Single Page Apps for GitHub Pages
